--- a/block-BJaael/code/index.html
+++ b/block-BJaael/code/index.html
@@ -12,7 +12,10 @@
   </head>
   <body>
     <h1 class="heading">🤯 Disco Grid 🤩</h1>
+     <div class="container flex">
 
-    <script src="./script.js"></script>
+     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
