--- a/block-BJaaep/code/index.html
+++ b/block-BJaaep/code/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="wrapper">
         <h2>Without Event Deligation</h2>
-        <ul class="boxes">
+        <ul class="boxes first">
           <li class="box">1</li>
           <li class="box"></li>
           <li class="box"></li>
@@ -33,7 +33,7 @@
       </div>
       <div class="wrapper">
         <h2>With Event Deligation</h2>
-        <ul class="boxes">
+        <ul class="boxes second">
           <li class="box"></li>
           <li class="box"></li>
           <li class="box"></li>
