--- a/block-BJaaeo/code/index.html
+++ b/block-BJaaeo/code/index.html
@@ -11,8 +11,38 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>🤯 Calculator 🤩</h1>
-
-    <script src="./script.js"></script>
+    <h1 class="heading">🤯 Calculator 🤩</h1>
+    <div class="container">
+      <div class="input">
+        <p class="input-text"></p>
+      </div>
+      <div class="main">
+        <div class="container-number flex justify-between align-center">
+          <div class="btn">+</div>
+          <div class="btn">-</div>
+          <div class="btn">*</div>
+          <div class="btn">/</div>
+        </div>
+        <div class="main-container flex justify-between">
+          <div class="numbers flex justify-between align-center flex-wrap flex-75">
+            <div class="number">1</div>
+            <div class="number">2</div>
+            <div class="number">3</div>
+            <div class="number">4</div>
+            <div class="number">5</div>
+            <div class="number">6</div>
+            <div class="number">7</div>
+            <div class="number">8</div>
+            <div class="number">9</div>
+            <div class="number">.</div>
+            <div class="number">0</div>
+            <div class=" clear">c</div>
+          </div>
+          <div class="plus flex justify-center">=</div>
+        </div>
+      </div>
+      
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
