--- a/block-BJaaer/code/index.html
+++ b/block-BJaaer/code/index.html
@@ -41,7 +41,7 @@
           <input
             id="color"
             type="color"
-            name="email"
+            name="color"
             placeholder="Enter your email"
           />
         </div>
@@ -52,7 +52,7 @@
             type="range"
             max="10"
             step="1"
-            name="email"
+            name="range"
             placeholder="Enter your email"
           />
         </div>
@@ -92,6 +92,6 @@
         <button type="submit">Submit</button>
       </form>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
