--- a/block-BJaaes/code/index.html
+++ b/block-BJaaes/code/index.html
@@ -7,7 +7,7 @@
     <title>Form Validation 👇</title>
   </head>
   <body>
-   
-    <script src="./script.js"></script>
+   <h1>Form Validation</h1>
+    <script src="script.js"></script>
   </body>
 </html>
