--- a/block-BJaaet/code/index.html
+++ b/block-BJaaet/code/index.html
@@ -6,6 +6,7 @@
     <title>Movie Watch List</title>
   </head>
   <body>
-    <script src="./script.js"></script>
+    <h1>watch list</h1>
+    <script src="script.js"></script>
   </body>
 </html>
