--- a/block-BJaaex/code/index.html
+++ b/block-BJaaex/code/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menory Game</title>
+    <script src="https://kit.fontawesome.com/379acff5c7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body></body>
+  <body>
+    <div class="container flex  flex-column align-center">
+      <h1 class="primary-heading">Memory Game</h1>
+      <div class="info flex justify-center align-center">
+				<div class="lifes">
+					<i class="fas fa-star life"></i>
+					<i class="fas fa-star life"></i>
+					<i class="fas fa-star life"></i>
+				</div>
+				<h2 class="moves"><span class="move">0</span> Moves</h2>
+				<h2 class="timer"> <span class="minute">00</span> : <span class="second">00</span>s</h2>
+				<i class="fas fa-redo reset"></i>
+      </div>
+      <ul class="box-container flex justify-between align-center flex-wrap">
+      </ul>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
